--- a/owncloud/9.0/apache/debian/Dockerfile
+++ b/owncloud/9.0/apache/debian/Dockerfile
@@ -67,11 +67,11 @@ RUN curl -fsSL -o owncloud.tar.gz \
 	# sscpac calendar application
 	# eventually we should run the Makefile to package only the necessary files.   Makefile uses --exclude-vcs-ignores
 	# that is not available with the base image's version of tar.  The ignores option excludes files in .gitignore
-	&& curl -fsSL -o calendar.tar.gz \ 
+	&& curl -fsSL -o owncloud-calendar.tar.gz \ 
 	    "https://github.com/sscpac/owncloud-calendar/archive/v1.0.tar.gz" \
-	&& tar -xzf calendar.tar.gz -C /usr/src/owncloud/apps/ \
-	&& mv /usr/src/owncloud/apps/owncloud-calendar-1.0 /usr/src/owncloud/apps/calendar/ \
-	&& rm -rf calendar.* 
+	&& tar -xzf owncloud-calendar.tar.gz \
+	&& mv ./owncloud-calendar-1.0/app /usr/src/owncloud/apps/calendar/ \
+	&& rm -rf owncloud-calendar*  
 
 COPY docker-entrypoint.sh /entrypoint.sh
 RUN chmod u+x /entrypoint.sh
