--- a/owncloud/9.0/fpm/alpine/Dockerfile
+++ b/owncloud/9.0/fpm/alpine/Dockerfile
@@ -46,7 +46,8 @@ RUN set -ex \
 	    && apk del .build-deps
 
 ENV OWNCLOUD_VERSION 9.0.2
-VOLUME /var/www/html
+VOLUME /var/www/owncloud
+WORKDIR /var/www/owncloud
 
 # Install sscpac/owncloud-core, sscpac/owncloud-calendar, and owncloud/owncloud-3rdparty
 # using source release from GitHub. Eventually the sscpac/owncloud-* should be built from
