*Modified proxy to use cert/key from host machine *Added dod root CAs to truststores *Extracted CAS and SOAF versions into environment variable

--- a/soaf/1.0/cas/Dockerfile
+++ b/soaf/1.0/cas/Dockerfile
@@ -1,10 +1,12 @@
 FROM tomcat:jre8-alpine
 
+ENV CAS_VERSION 1.0.5
+
 RUN rm -rf $CATALINA_HOME/webapps/*  \
     && apk add --update curl 
 
 RUN curl -fsSL -o $CATALINA_HOME/webapps/cas.war \
-        "https://oss.sonatype.org/content/groups/public/mil/navy/spawar/soaf/cas-overlay/1.0.4/cas-overlay-1.0.4.war" 
+        "https://oss.sonatype.org/content/groups/public/mil/navy/spawar/soaf/cas-overlay/$CAS_VERSION/cas-overlay-$CAS_VERSION.war" 
 
 ADD conf/truststore.jks $CATALINA_HOME/certs/
 ADD conf/setenv.sh $CATALINA_HOME/bin
