*Added a java agent to optionally disable certificate hostname verification at runtime *removed database seeding from soaf-server container and moved it into a new container (db-seed)

--- a/soaf/1.0/cas/Dockerfile
+++ b/soaf/1.0/cas/Dockerfile
@@ -8,8 +8,7 @@ RUN rm -rf $CATALINA_HOME/webapps/*  \
 RUN curl -fsSL -o $CATALINA_HOME/webapps/cas.war \
         "https://oss.sonatype.org/content/groups/public/mil/navy/spawar/soaf/cas-overlay/$CAS_VERSION/cas-overlay-$CAS_VERSION.war" 
 
+ADD conf/lhnva.jar $CATALINA_HOME/lib/
 ADD conf/truststore.jks $CATALINA_HOME/certs/
 ADD conf/setenv.sh $CATALINA_HOME/bin
-
-
 
